# maiko

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  chat.json  flake.nix  justfile  shell.nix  spellcheck.dic
doc/: advanced.md  concepts.md  faq.md  monitoring.md  testing.md
docs/: advanced.md  concepts.md  design-decisions.md  faq.md  getting-started.md  monitoring.md  testing.md  why-maiko.md
examples/: guesser.rs  pingpong.rs
macros/: Cargo.toml
macros/src/: macros.rs
maiko/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
maiko-macros/: CHANGELOG.md  Cargo.toml  README.md
maiko-macros/src/: lib.rs
maiko/examples/: arbitrage.rs  backpressure.rs  guesser.rs  hello-world.rs  monitoring.rs  pingpong.rs  recorder.rs  test-harness.rs
maiko/src/: actor.rs  actor_builder.rs  actor_config.rs  actor_handle.rs  actor_id.rs  config.rs  context.rs  envelope.rs  error.rs  event.rs  internal.rs  label.rs  lib.rs  meta.rs  overflow_policy.rs  runtime.rs  step_action.rs  subscribe.rs  supervisor.rs  topic.rs
maiko/src/internal/: actor_controller.rs  actor_handler.rs  broker.rs  step_handler.rs  step_pause.rs  subscriber.rs  subscription.rs
maiko/src/introspection/: actor_info.rs  introspector.rs  mod.rs  shared_state.rs  state_tracker.rs
maiko/src/monitoring/: command.rs  dispatcher.rs  mod.rs  monitor.rs  monitor_handle.rs  monitoring_event.rs  provider.rs  recorder.rs  registry.rs  sink.rs
maiko/src/monitors/: actor_monitor.rs  mod.rs  recorder.rs  tracer.rs
maiko/src/observing/: mod.rs  observer.rs  observer_event.rs  observers_handler.rs  observing_runtime.rs
maiko/src/test_harness/: actor_spy.rs  event_collector.rs  event_entry.rs  event_spy.rs  mod.rs  test_event.rs  test_harness.rs  topic_spy.rs
maiko/src/testing/: actor_flow.rs  actor_spy.rs  actor_trace.rs  event_chain.rs  event_collector.rs  event_entry.rs  event_flow.rs  event_handle.rs  event_matcher.rs  event_query.rs  event_spy.rs  event_trace.rs  expectation.rs  harness.rs  mod.rs  spy_utils.rs  test_event.rs  topic_spy.rs
maiko/tests/: introspection.rs  label.rs
planning/: flow-control-0.3-overview.md  flow-control-decisions.md
review/: CODE_REVIEW.md  FUNCTIONAL_DOCUMENTATION.md  IMPLEMENTATION_PLAN_ISSUE_39.md  TEST_COVERAGE.md
scratch/: backpressure-plan.md  backpressure.md
src/: actor.rs  broker.rs  config.rs  context.rs  envelope.rs  error.rs  event.rs  inner.rs  lib.rs  main.rs  meta.rs  subscriber.rs  supervisor.rs  topic.rs
src/actor/: actor.rs  context.rs  mod.rs
src/event/: event.rs  mod.rs  topic.rs
src/inner/: actor_handler.rs
src/internal/: actor_handler.rs  broker.rs  subscriber.rs
