[package]
name = "maiko"
version = "0.0.1"
edition = "2024"
description = "A lightweight, topic-based actor system for Tokio"
authors = ["David de Rosier <ddrcode@gmail.com>"]
license = "MIT"
keywords = ["actor", "async", "events", "pubsub", "messaging"]
categories = ["asynchronous", "concurrency"]
repository = "https://github.com/ddrcode/maiko"
homepage = "https://github.com/ddrcode/maiko"
readme = "README.md"

[dependencies]
thiserror = "2.0.14"
tokio = {version="1.47.1", features=["sync", "test-util", "macros", "rt-multi-thread"]}
uuid = { version = "1.18.0", features = ["v4"] }
