[package]
name = "maiko-macros"
version = "0.2.3"
edition = "2024"
rust-version = "1.85"
description = "Procedural macros for the Maiko actor runtime"
authors = ["David de Rosier <ddrcode@gmail.com>"]
license = "MIT"
repository = "https://github.com/ddrcode/maiko"
keywords = ["maiko", "actor", "macro", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
homepage = "https://github.com/ddrcode/maiko"
documentation = "https://docs.rs/maiko-macros"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.44"
syn = "2.0.114"
