[package]
name = "maiko"
version = "0.2.3"
edition = "2024"
rust-version = "1.85"
description = "Lightweight event-driven actor runtime with topic-based pub/sub for Tokio"
authors = ["David de Rosier <ddrcode@gmail.com>"]
license = "MIT"
keywords = ["actor", "pubsub", "tokio", "events", "streams"]
categories = ["asynchronous", "concurrency", "network-programming"]
repository = "https://github.com/ddrcode/maiko"
homepage = "https://github.com/ddrcode/maiko"
documentation = "https://docs.rs/maiko"
readme = "README.md"
exclude = [".gitignore", ".github/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["macros"]
macros = ["dep:maiko-macros"]
serde = ["dep:serde", "dep:serde_json"]
recorder = ["monitoring", "serde"]
monitoring = []
test-harness = ["monitoring"]

[dependencies]
maiko-macros = { path="../maiko-macros", version="0.2.0", optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0.18"
tokio = {version="1.49.0", features=["macros", "rt", "rt-multi-thread", "time"]}
tokio-util = "0.7.18"
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
rand = "0.9.2"

[[example]]
name = "hello-world"
required-features = ["default"]

[[example]]
name = "pingpong"
required-features = ["default"]

[[example]]
name = "guesser"
required-features = ["default"]

[[example]]
name = "monitoring"
required-features = ["monitoring"]

[[example]]
name = "arbitrage"
required-features = ["default", "test-harness"]

[[example]]
name = "recorder"
required-features = ["recorder"]
